# flet-fce-enhanced

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fce_enhanced/: __init__.py  dialogs.py  diff_pane.py  editor.py  help_content.py  search.py  themes.py
src/flet_code_editor_enhanced/: __init__.py  editor.py  file_dialog.py  search.py
tests/: conftest.py  test_diff_pane.py  test_editor.py  test_file_dialog.py  test_search.py  test_themes.py
