[project]
name = "flet-code-editor-enhanced"
version = "0.1.0"
description = "Enhanced Flet CodeEditor with file open/save/save-as/close capabilities"
readme = "README.md"
authors = [
    { name = "Tim Lang", email = "ttim.lang@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flet>=0.81.0",
    "flet-code-editor>=0.81.0",
    "loguru>=0.7",
]

[project.scripts]
flet-code-editor-enhanced = "flet_code_editor_enhanced.editor:run"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
