[project]
name = "fce-enhanced"
version = "0.1.0"
description = "Enhanced Flet CodeEditor with file open/save/save-as/close/search and replace capabilities"
readme = "README.md"
authors = [
    { name = "Tim Lang", email = "ttim.lang@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "flet",
    "code-editor",
    "syntax-highlighting",
    "text-editor",
    "gui",
    "flutter",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
    "Operating System :: OS Independent",
]
dependencies = [
    "flet>=0.81.0",
    "flet-code-editor>=0.81.0",
    "loguru>=0.7",    
]

[project.urls]
Homepage = "https://github.com/oktl/flet-fce-enhanced"
Repository = "https://github.com/oktl/flet-fce-enhanced"
"Bug Tracker" = "https://github.com/oktl/flet-fce-enhanced/issues"

[project.scripts]
fce-enhanced = "fce_enhanced.editor:run"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -ra --cov=fce_enhanced --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["fce_enhanced"]
known-third-party = ["flet", "rich"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
force-sort-within-sections = true

